<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iSneeze</string>
    <string name="title_activity_main">Welkom!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="isneeze">iSneeze</string>
    <string name="title_activity_i_sneeze">iSneeze</string>
    <string name="title_activity_register">Registreer</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="voornaam">Voornaam</string>
    <string name="achternaam">Achternaam</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginnaam">Loginnaam</string>
    <string name="title_activity_login">Log in</string>
    <string name="login">Login</string>
    <string name="i_just_sneezed">I just SNEEZED!!!</string>
    <string name="title_activity_sneeze_list">Alle Sneezes</string>
    <string name="all_sneezes">All Sneezes</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="suggestion_text_search_friend">Search</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="kies_geboortedatum">Kies geboortedatum</string>
    <string name="add_friend">Add Friend</string>
    <string name="search">Search</string>
    <string name="login_capital">LOGIN</string>
    <string name="registreer_capital">REGISTREER</string>
    <string name="title_activity_friend_requests">FriendRequestsActivity</string>
    <string name="accept">Accept</string>
    <string name="pending_friends">Pending friends</string>
    <string name="no_friend_requests">No friends requests</string>
    <string name="title_activity_sneeze_overview">All Sneezes Graph</string>
    <string name="all_sneezes_graph">Graph Overview</string>
    <string name="title_activity_get_friends_list">GetFriendsListActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_real_main">RealMainActivity</string>
    <string name="logout">Logout</string>
    <string name="my_friends">My Friends</string>
    <string name="go_to_friends_profile">See profile</string>
    <string name="vul_alle_velden_in">Vul alle velden in!</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="my_data">My data</string>
    <string name="firstname">Firstname</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile_data">Edit profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="title_activity_custom">CustomActivity</string>
    <string name="title_activity_custom_action_bar">CustomActionBarActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="take_picture">Take picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="switch_1">Switch</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="Phonenumber">Phonenumber</string>

</resources>
