<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.administrator.e_pic.iSneezeActivity">

    <!-- TODO icoontje laten werken -->
    <item
        android:id="@+id/go_to_all_sneezes_list_action_bar"
        android:title="@string/all_sneezes"
        android:icon="@drawable/sneeze_icon"/>
    <item
        android:id="@+id/add_friend_action_bar"
        android:title="@string/add_friend"
        />
    <item
        android:id="@+id/pending_friends_action_bar"
        android:title="@string/pending_friends"/>

    <item
        android:id="@+id/go_to_all_sneezes_graph_action_bar"
        android:title="@string/all_sneezes_graph"/>
    <item
        android:id="@+id/logout_user"
        android:title="@string/logout"/>

</menu>
