<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.administrator.e_pic.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingBottom="10sp"/>
    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/voornaam"/>
    <EditText
        android:id="@+id/achternaam_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/achternaam"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginnaam"/>
    <EditText
        android:id="@+id/password_edit_text"
        android:password="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_of_birth_text_view"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="70"/>
        <Button
            android:id="@+id/date_of_birth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kies_geboortedatum"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
