<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.administrator.e_pic.EditProfileActivity">
    <TextView
        android:text="@string/my_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/titles_activities"
        android:textSize="20sp"/>
    <ImageButton
        android:id="@+id/profile_picture_image_button_edit_profile_activity"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@drawable/omkadering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/my_first_name_edit_text_edit_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/voornaam"/>
        <EditText
            android:id="@+id/my_name_edit_text_edit_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/achternaam"/>
        <EditText
            android:id="@+id/my_username_edit_text_edit_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/my_phone_number_edit_text_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phonenumber"
            android:inputType="phone" />
        <EditText
            android:id="@+id/my_old_password_edit_text_edit_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/old_password"/>
        <EditText
            android:id="@+id/my_new_password_edit_text_edit_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/new_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/ok_edit_profile_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/my_button"/>
        <Button
            android:id="@+id/cancel_edit_profile_data_button"
            android:layout_marginLeft="15dp"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        </LinearLayout>

</LinearLayout>
