<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.e_pic.LoginActivity"
    android:orientation="vertical"
    android:background="#ffd4dfd8">

    <TextView
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/titles_activities"
        android:capitalize="words"
        android:textSize="26dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/omkadering">
        <EditText
            android:id="@+id/username_edit_text_login"
            android:textColor="@color/titles_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:capitalize="words"
            />
        <EditText
            android:id="@+id/password_edit_text_login"
            android:password="true"
            android:textColor="@color/titles_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
    </LinearLayout>
    <Button
        android:id="@+id/ok_button_login"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/my_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>


</LinearLayout>
