<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.e_pic.MainActivity"
    android:background="@color/background_color">


    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isneeze"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:textColor="@color/titles_activities" />


    <Button

        android:id="@+id/login_button_main"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/login_capital"
        android:layout_above="@+id/register_button_main"
        android:layout_alignLeft="@+id/register_button_main"
        android:layout_alignStart="@+id/register_button_main"
        android:background="@color/color_button_1" />

    <Button
        android:id="@+id/register_button_main"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/registreer_capital"
        android:layout_alignParentBottom="true"
        android:background="@color/color_button_2" />

</RelativeLayout>
